tests/reject/where_nongeneric.ty
fn f(x: int) -> int where numeric(x):
    return x

fn main():
    println(str(f(1)))
